--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,8 +104,8 @@ body {
 }
 
 .user-link {
-  min-width: 44px;
-  min-height: 64px;
+  width: 44px;
+  height: 64px;
   display: block;
   font-weight: 700;
   font-size: 20px;
@@ -115,18 +115,21 @@ body {
   text-decoration: none;
   padding: 22px 12px;
   box-sizing: border-box;
+  outline: 1px solid #5582a0;
 }
 
 .user-link-search {
   background-image: url("../images/header/search.svg");
   background-size: 20px 20px;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .user-link-favorites {
   background-image: url("../images/header/likes.svg");
   background-size: 20px 20px;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .user-favorites-num {
@@ -345,10 +348,13 @@ body {
   background-color: #756157;
   border-radius: 4px;
   text-decoration: none;
-  padding: 8px 50px;
+  display: block;
+  width: 360px;
+  padding: 8px;
   text-transform: uppercase;
   text-align: center;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 .subscribe {
@@ -402,6 +408,7 @@ body {
 }
 
 .subscribe-button {
+  display: inline-block;
   font-family: inherit;
   font-weight: 700;
   font-size: 20px;
@@ -412,7 +419,9 @@ body {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   text-transform: uppercase;
-  padding: 8px 50px;
+  width: 232px;
+  padding: 8px;
+  cursor: pointer;
 }
 
 .page-footer {
@@ -432,22 +441,29 @@ body {
 .socials-item {
   width: 48px;
   height: 40px;
+  cursor: pointer;
+  outline: 1px solid #5582a0;
 }
 
 .socials-link {
-  font-weight: 400;
+  /*font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   color: #000000;
   background-color: #ffffff;
-  text-decoration: none;
-  width: 48px;
-  height: 40px;
-  margin-right: 8px;
+  text-decoration: none;*/
+  position: relative;
+  display: block;
+  padding: 0;
 }
 
-.socials-link:nth-child(3) {
-  margin-right: 8px;
+.navigation-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
 
 .phone {
@@ -470,6 +486,7 @@ body {
   height: 35px;
   align-self: center;
   display: block;
+  outline: 1px solid #5582a0;
 }
 
 .catalog-header {
@@ -583,6 +600,7 @@ body {
 }
 
 .filter-button {
+  display: inline-block;
   width: 191px;
   font-family: inherit;
   font-weight: 700;
@@ -594,6 +612,7 @@ body {
   text-transform: uppercase;
   text-align: center;
   padding: 8px 0;
+  cursor: pointer;
 }
 
 .apply {
@@ -606,16 +625,20 @@ body {
 }
 
 .catalog-products {
-  padding: 50px 70px 0;
+  padding: 50px 70px 60px;
 }
 
 .sorting {
   display: flex;
   flex-wrap: wrap;
+  gap: 70px;
+  align-items: flex-start;
 }
 
 .sorting .subtitle {
-  align-self: center;
+  width: 468px;
+  /*align-self: center; Проверить,как будет выравниваться при ппереполнении. Нужен ли padding-top: 7px;?*/
+  padding-top: 7px;
 }
 
 .select-control {
@@ -625,13 +648,12 @@ body {
   line-height: 21px;
   color: #333333;
   padding: 10px 14px;
-  min-width: 292px;
-  min-height: 49px;
-  margin-left: auto;
-  margin-right: 70px;
+  width: 292px;
+  height: 48px;
   box-sizing: border-box;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .button-show-list{
@@ -639,7 +661,10 @@ body {
   padding: 0;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
+  width: 160px;
+  box-sizing: border-box;
 }
 
 .button-show {
@@ -651,9 +676,10 @@ body {
   color: #333333;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
-  width: 48px;
-  height: 48px;
+  width: 44px;
+  height: 44px;
   display: block;
+  cursor: pointer;
 }
 
 .button-show-active {
@@ -692,7 +718,6 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: #000000;
-  order: 1;
   padding: 0;
   margin: 0;
 
@@ -706,7 +731,6 @@ body {
   width: 300px;
   height: auto;
   display: block;
-  grid-column: 1/-1;
 }
 
 .product-type {
@@ -732,12 +756,11 @@ body {
   border-radius: 4px;
   text-decoration: none;
   text-align: center;
-  padding: 8px 0;
-  display: block;
-  width: 140px;
+  padding: 8px;
 }
 
 .product-to-favorites {
+  display: inline-block;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -747,12 +770,12 @@ body {
   border: 0;
   border-radius: 4px;
   text-transform: uppercase;
-  padding: 8px 0;
-  display: block;
-  width: 140px;
+  padding: 8px;
+  cursor: pointer;
 }
 
 .product-in-favorites {
+  display: inline-block;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -762,9 +785,8 @@ body {
   border: 0;
   border-radius: 4px;
   text-transform: uppercase;
-  padding: 8px 0;
-  display: block;
-  width: 140px;
+  padding: 8px;
+  cursor: pointer;
 }
 
 .product-rating {
@@ -774,18 +796,15 @@ body {
   text-transform: uppercase;
   background-color: #f2f2f2;
   border-radius: 4px;
-  padding: 9px 0 8px;
+  padding: 9px 8px 8px;
   text-align: center;
-  display: block;
-  width: 140px;
 }
 
 .stars {
-  width: 140px;
+
 }
 
 .pagination {
-  width: 1060px;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
