--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,17 +112,17 @@ body {
   margin-right: 2px;
 }
 
-  .navigation-link:hover {
-    opacity: 0.6;
-  }
+.navigation-link:hover {
+  opacity: 0.6;
+}
 
-  .navigation-link:focus-visible {
-    opacity: 0.6;
-  }
+.navigation-link:focus-visible {
+  opacity: 0.6;
+}
 
-  .navigation-link:active {
-    opacity: 0.3;
-  }
+.navigation-link:active {
+  opacity: 0.3;
+}
 
 .navigation-link-current::after {
   position: absolute;
@@ -132,7 +132,6 @@ body {
   left: 16px;
   height: 2px;
   background-color: #756257;
-
 }
 
 .user-list {
@@ -161,7 +160,6 @@ body {
   padding: 22px 10px 22px 12px;
   box-sizing: border-box;
   margin-right: 2px;
-  /*outline: 1px solid #5582a0;*/
 }
 
 .user-link:hover {
@@ -1406,6 +1404,9 @@ body {
 
 .modal-container {
   position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   right: 0;
@@ -1446,6 +1447,11 @@ body {
   cursor: pointer;
 }
 
+.modal-close-button:hover,
+.modal-close-button:focus-visible {
+  background-color: #e6e6e6;
+}
+
 .modal-title {
   margin: 0;
   margin-bottom: 64px;
@@ -1464,7 +1470,6 @@ body {
 }
 
 .date-label {
-  display: inline-block;
   width: 127px;
   padding-right: 10px;
   font-family: inherit;
@@ -1476,18 +1481,25 @@ body {
 }
 
 .date-field {
-  width: 380px;
+  width: 440px;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-radius: 4px;
   color: #000000;
   background-color: #f2f2f2;
+  background-image: url("../images/date.svg");
+  background-repeat: no-repeat;
+  background-position: 402px 16px;
   padding: 12px 20px;
+
   box-sizing: border-box;
   border: none;
+}
+
+.date-field:hover  {
+ background-color: #e6e6e6;
 }
 
 .date-search {
@@ -1533,7 +1545,6 @@ body {
 
 .search-form-number-blok {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 48px;
   gap: 4px;
@@ -1542,6 +1553,18 @@ body {
 .search-form-number {
   display: flex;
   align-items: center;
+}
+
+.number-label-adult {
+  width: 127px;
+  padding-right: 10px;
+}
+
+.number-label-children {
+  width: 132px;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 46px;
 }
 
 .number-label {
@@ -1554,23 +1577,12 @@ body {
   padding-right: 10px;
 }
 
-.number-label-adult {
-  width: 127px;
-}
-
-.number-label-children {
-  width: 132px;
-  display: flex;
-}
-
 .tooltip {
   position: relative;
   margin-top: 1px;
   width: 26px;
   height: 26px;
   flex-shrink: 0;
-
-
 }
 
 .tooltip-toggle {
@@ -1579,7 +1591,7 @@ body {
   padding: 0;
   margin: 0;
   display: block;
-
+  border-radius: 4px;
 }
 
 .tooltip-icon {
@@ -1637,7 +1649,7 @@ body {
 }
 
 .number-field {
-  width: 31px;
+  width: 30px;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
@@ -1647,7 +1659,9 @@ body {
   padding: 12px 3px;
   box-sizing: border-box;
   border: none;
+  border-radius: 4px;
   appearance: textfield;
+  z-index: 2;
 }
 
 .number-field::-webkit-outer-spin-button,
@@ -1655,27 +1669,50 @@ body {
   appearance: none;
 }
 
+.minus-plus {
+  display: flex;
+  background: #f2f2f2;
+  width: 110px;
+  height: 48px;
+  border-radius: 4px;
+  justify-content: space-between;
+}
+
 .number-minus {
-  width: 40px;
+  width: 38px;
   height: 48px;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
   background-color: #f2f2f2;
-  background-image: url("../images/minus.svg");
   background-repeat: no-repeat;
   background-position: center;
   padding: 14px 10px;
   box-sizing: border-box;
   border: none;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-radius: 4px;
+  position: relative;
+}
 
+.number-minus::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: rgba(117, 97, 87, 0.3);
+  mask-image: url("../images/minus.svg");
+  mask-repeat: no-repeat;
+  top: 14px;
+  left: 10px;
+}
+
+.number-minus:hover.number-minus::after {
+  background-color: #000000;
 }
 
 .number-plus {
-  width: 40px;
+  width: 38px;
   height: 48px;
   font-family: inherit;
   font-weight: 700;
@@ -1688,8 +1725,7 @@ body {
   padding: 14px 10px;
   box-sizing: border-box;
   border: none;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-radius: 4px;
 }
 
 .search-button {
